--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "email": "nicolaslechenic@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.3"
+    }
 }
